# 202311_FastDynamicMesh

./: .gitignore  CMakeLists.txt  FDMOutput.txt  FastDynamicMesh.c  FileInputTest.c  ModeCalculation.bat  fdmm.c  outputNode0.csv  outputNode1.csv
import/: CompilerConfig.cmake  CoolPropConfig.cmake  FileProcess.cmake
mode/: ModeCalculation.apdl  ModeOutput.apdl
src/: CMakeLists.txt  FastDynamicMesh.c  fdmUtils.h  test.c  udf_names.c
